# automated-timesync

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  time-sync.example.toml
src/time_sync/: __init__.py  __main__.py  clockify.py  config.py  state.py  sync.py  toggl.py
systemd/: time-sync.service  time-sync.timer
tests/: test_main_cli.py  test_state.py  test_sync.py
