[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "time-sync"
version = "0.1.0"
description = "Sync Clockify time entries into Toggl Track"
readme = "CLAUDE.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Frank Murphy" }]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.350",
    "ruff>=0.5.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
time-sync = "time_sync.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/time_sync"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
